[FIX] scroll jumps in homepage
[FIX] Shop template Retina view enabled by default

[FIX] Sticky menu was being displayed under some elements

[ADD] scroll down image for white backgrounds

--- a/theme_vauxoo/static/src/less/main.less
+++ b/theme_vauxoo/static/src/less/main.less
@@ -389,7 +389,7 @@ hr.title {
 }
 .diagonal-right {
     padding: 5% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */
-    padding-bottom: 15%;
+    padding-bottom: 10%;
     -webkit-transform: skewY(-2deg);
     -moz-transform: skewY(-2deg);
     -ms-transform: skewY(-2deg);
@@ -424,7 +424,7 @@ hr.title {
     background: @vauxoo-white;
     position: relative;
     z-index: 1;
-    padding: 5% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */
+    padding: 10% 20px; /* Added a percentage value for top/bottom padding to keep the wrapper inside of the parent */
     padding-bottom: 10%;
 
   &:before,
@@ -471,6 +471,11 @@ hr.title {
 }
 .arrow-scroll-down {
     padding-top: 30vh;
+
+}
+.arrow-scroll-down-center {
+    padding-top: 5vh;
+    padding-bottom: 5vh;
 }
 .nopadding {
     padding: 0px !important;
